--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -36,6 +36,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   color: $dark_color;
   padding: 10px;
   border-bottom: 1px solid $dark_color;
