--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -75,7 +75,9 @@ a {
   width: 100%;
   margin-left: -10px;
   padding: 10px;
+  background-color: #FAEBD7;
   border: 1px solid $dark_color;
+  z-index: 3;
 }
 
 @media screen and (min-width: 600px) {
